--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button id="button3">Fight dragon</button>
     </div>
     <div id="monsterStats">
-      <span class="stat">Monster Name:
+      <span class="stat">Monster name:
         <strong><span id="monsterName"></span></strong>
       </span>
       <span class="stat">Health:
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <script src="./index.js"></script>
+  <script src="./index.js" type="module"></script>
 </body>
 
 </html>
